# noeta

./: .editorconfig  .gitignore  .ignore  .importlinter  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  mkdocs.yml  noeta.config.example.json  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
apps/noeta-agent/: .env.example  .gitignore  README.md  models.json  pyproject.toml
apps/noeta-agent/noeta/agent/: __main__.py  config.py  config_registry.py  main.py  models_config.py  skills.py
apps/noeta-agent/noeta/agent/api/: __init__.py  admin.py  auth.py  board.py  channels.py  feedback.py  image_input.py  knowledge.py  mcp.py  memories.py  misc.py  sessions.py  skills.py  space_skills.py  spaces.py  templates.py
apps/noeta-agent/noeta/agent/auth/: __init__.py  cookies.py  deps.py  provider.py
apps/noeta-agent/noeta/agent/backend/: __init__.py  app.py  delta_hub.py  engine_room.py  image_input.py  lifecycle.py  mcp_service.py  read_views.py  resource_services.py  static_assets.py  stream.py  task_protocol.py  workspace_service.py
apps/noeta-agent/noeta/agent/commands/: resolve.py
apps/noeta-agent/noeta/agent/host/: __init__.py  board_tools.py  channel_tools.py  docker_sandbox.py  feedback_analysis.py  mcp_registry.py  mock_llm.py  preview_gateway.py  preview_ws.py  providers.py  routing_provider.py  sandbox_preview.py  sandbox_preview_gateway.py  sandbox_provider.py  sdk_browser_backend.py  sdk_sandbox_exec_env.py  service.py  storage.py  title.py  translator.py  workspace_files.py  workspace_registry.py
apps/noeta-agent/noeta/agent/observe/: __init__.py  hooks_config.py  live_timeline.py
apps/noeta-agent/noeta/agent/read_models/: _common.py  catalog.py  context_stats.py  context_view.py  detail.py  tail.py
apps/noeta-agent/noeta/agent/services/: __init__.py  channels.py  feedback_reference.py  feedback_report.py  knowledge_resolve.py  knowledge_sync.py  mcp_discovery.py
apps/noeta-agent/noeta/agent/services/knowledge/: repo_sync.py
apps/noeta-agent/noeta/agent/skills_builtin/handoff/: SKILL.md
apps/noeta-agent/noeta/agent/skills_builtin/simplify/: SKILL.md
apps/noeta-agent/noeta/agent/skills_builtin/verify/: SKILL.md
apps/noeta-agent/noeta/agent/store/: __init__.py  agent_config.py  app_config.py  board.py  channels.py  feedback.py  knowledge.py  mcp.py  sessions.py  skills.py  spaces.py  templates.py  users.py
apps/noeta-agent/noeta/agent/workflow/: __init__.py  handoff.py  service.py  templates.py  transcript.py
apps/noeta-agent/tests/: _docker_sandbox.py  conftest.py  test_admin.py  test_agent_config_api.py  test_api_flow.py  test_auth.py  test_auth_provider.py  test_board.py  test_cancel_terminal_status.py  test_channels.py  test_docker_sandbox.py  test_docker_sandbox_e2e.py  test_feedback_api.py  test_image_input.py  test_knowledge_api.py  test_knowledge_mounts.py  test_knowledge_resolve.py  test_knowledge_sync.py  test_mcp_api.py  test_mcp_resolver.py  test_memories_api.py  test_otlp_export.py  test_routing_provider.py  test_sandbox_e2e.py  test_sandbox_idle_reaper.py  test_sandbox_preview.py  test_sandbox_preview_e2e.py  test_sdk_browser_backend.py  test_sdk_sandbox_exec_env.py  test_skill_groups.py  test_skill_toggles.py  test_skills.py  test_space_skills_preview.py  test_space_skills_registry.py  test_spaces.py  test_streaming_delta.py  test_subtask_suspend_status.py  test_templates_api.py  test_title_generation.py  test_translator.py  (+4 more)
apps/web/: .gitignore  README.md  chat.html  index.html  package-lock.json  package.json  playwright.config.js  trace.html  vite.config.js  vite.config.ts
docs/: README.md  concepts.md  concepts.zh.md  daemon.md  daemon.zh.md  failure-modes.md  failure-modes.zh.md  getting-started.md  getting-started.zh.md  index.md  index.zh.md  noeta-agent.md  noeta-agent.zh.md  noeta-architecture-deep-dive.md  noeta-architecture-deep-dive.zh.md  quickstart.md  releasing.md  releasing.zh.md
docs/.vitepress/: config.ts
docs/_drafts/: state-is-a-fold.md
docs/adr/: README.md  agent-identity-and-provenance.md  background-subagent.md  (+39 more)
examples/: README.md  crash_resume.py  custom_tool.py  mcp_server.py  minimal_agent.py  permission_gate.py  sdk_minimal.py  spawn_subtask.py  swap_provider.py
scripts/: lint-naming.py  verify-sandbox-sdk-live.py
tests/: _builtin_skills.py  _pg.py  _sdk_session.py  _session_inputs.py  _skill_fixtures.py  _snapshot.py  _stub_provider.py  conftest.py  test_agent_bound_provenance.py  test_agent_engine_resolver.py  test_agent_spec_default_model.py  test_agent_spec_registry.py  test_aio_sandbox_exec_env.py  test_answer_normalization.py  test_app_tools.py  test_attempt_recovery.py  test_audit_observer.py  test_backend_background_drive.py  test_backend_delete_task.py  test_backend_deliver_event.py  test_backend_durable_storage.py  test_backend_image_input.py  test_backend_image_resolver.py  test_backend_memory_consolidation.py  test_backend_multiworker.py  test_backend_preview_mcp.py  test_backend_provider_config.py  test_backend_read_views.py  test_backend_skeleton.py  test_backend_static_assets.py  test_backend_streaming_delta.py  test_backend_workspaces.py  test_background_shell.py  test_background_shell_caps.py  test_background_shell_kill.py  test_background_shell_lifetime.py  test_background_shell_wake.py  test_background_subagent.py  test_browser_activation.py  test_browser_backend.py  (+261 more)
(+319 files in other folders)
