[project]
name = "noeta-agent"
version = "0.2.5"
description = "Noeta coding agent: server-side AI coding agent with a web UI. Durable event-sourced execution, multi-worker scheduling, per-session sandbox containers, provider-neutral. Run with python -m noeta.agent."
license = "Apache-2.0"
authors = [{ name = "The Noeta Authors" }]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "noeta-runtime>=0.2.5",
    "noeta-sdk>=0.2.5",
    # Official AIO Sandbox data-plane client (Fern-generated HTTP client). Backs
    # the SDK sandbox adapters (fs / shell / browser) in noeta.agent.host. Capped
    # below 0.1.0: still 0.0.x (pre-1.0, unstable wire). See
    # docs/implementation-specs/2026-07-10-sandbox-sdk-adapters.md.
    "agent-sandbox>=0.0.30,<0.1.0",
]

[project.urls]
Homepage = "https://github.com/initxy/noeta"
Repository = "https://github.com/initxy/noeta"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["noeta"]

# Bundle the coding web app into the wheel at noeta/agent/static so an installed
# ``python -m noeta.agent`` serves the frontend out-of-the-box.
# The source lives in standalone apps/web. Vite ``dist/`` is the runtime artifact
# the Python host serves; build apps/web before packaging. Include the source
# for static contract tests/debuggability, but do not include node_modules.
[tool.hatch.build.targets.wheel.force-include]
"../web/dist" = "noeta/agent/static/dist"
"../web/src" = "noeta/agent/static/src"
"../web/chat.html" = "noeta/agent/static/chat.html"
"../web/trace.html" = "noeta/agent/static/trace.html"
"../web/package.json" = "noeta/agent/static/package.json"
"../web/package-lock.json" = "noeta/agent/static/package-lock.json"
"../web/README.md" = "noeta/agent/static/README.md"
"../web/vite.config.js" = "noeta/agent/static/vite.config.js"

[tool.uv.sources]
noeta-runtime = { workspace = true }
noeta-sdk = { workspace = true }
