[project]
name = "noeta-agent"
version = "0.3.0"
description = "Noeta's official product: a multi-user, server-side agent platform."
requires-python = ">=3.12"
dependencies = [
    # agent-sandbox: the official AIO Sandbox client, the wire behind the SDK
    # adapters (sdk_sandbox_exec_env / sdk_browser_backend). 0.0.x is pre-1.0
    # with an unstable wire, so the upper bound is pinned.
    "agent-sandbox>=0.0.30,<0.1.0",
    "fastapi>=0.115",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    "noeta-sdk>=0.3.0",
    "noeta-runtime>=0.3.0",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.9",
    "pyyaml>=6",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.uv.sources]
noeta-sdk = { workspace = true }
noeta-runtime = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# PEP 420 namespace layout: `noeta/` and `noeta/agent/` have no __init__.py —
# noeta-runtime publishes the `noeta.agent` identity layer (spec/registry) and
# this dist publishes the product modules into the same namespace.
[tool.hatch.build.targets.wheel]
packages = ["noeta"]
